--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>Asheesh</h1>
+    <h1>Asheesh Gupta</h1>
     <form >
         <div id="winner"></div>
     <div id="main">
